more java 16 related cleanup